--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <meta property="og:title" content="The Shitty List" />
-        <meta property="og:description" content="A collection of the hardest shitty levels that meet certain difficulty and quality standards" />
-        <meta property="og:url" content="https://tsl.pages.dev" />
-        <meta property="og:image" content="/tsl_icon.png" />
-        <title>The Shitty List</title>
+        <meta property="og:title" content="2 Player List" />
+        <meta property="og:description" content="A collection of the hardest 2-player levels that were beaten solo" />
+        <meta property="og:url" content="https://2plist.github.io/" />
+        <meta property="og:image" content="/favicon.ico" />
+        <title>2 Player List</title>
         <link rel="icon" href="/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,8 +39,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>TSL</h2>
-                <p>v1.6.5</p>
+                <h2>2plist</h2>
+                <p>v1.0.0</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -62,15 +62,9 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                    <a class="nav__icon" href="https://discord.gg/carQUB7JN2">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
-                    <a
-                        class="nav__cta type-label-lg"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
-                        target="_blank"
-                        >Submit Record</a
-                    >
                 </div>
             </nav>
         </header>
