--- a/index.html
+++ b/index.html
@@ -6,35 +6,35 @@
         <meta property="og:title" content="2 Player List" />
         <meta property="og:description" content="A collection of the hardest 2-player levels that were beaten solo" />
         <meta property="og:url" content="https://2plist.github.io/" />
-        <meta property="og:image" content="/favicon.ico" />
+        <meta property="og:image" content="favicon.ico" />
         <title>2 Player List</title>
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" type="text/css" href="/css/reset.css" />
-        <link rel="stylesheet" type="text/css" href="/css/typography.css" />
-        <link rel="stylesheet" type="text/css" href="/css/main.css" />
-        <link rel="stylesheet" type="text/css" href="/css/pages/list.css" />
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/typography.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
+        <link rel="stylesheet" type="text/css" href="css/pages/list.css" />
         <link
             rel="stylesheet"
             type="text/css"
-            href="/css/pages/leaderboard.css"
+            href="css/pages/leaderboard.css"
         />
-        <link rel="stylesheet" type="text/css" href="/css/pages/roulette.css" />
-        <link rel="stylesheet" type="text/css" href="/css/components/nav.css" />
-        <link rel="stylesheet" type="text/css" href="/css/components/btn.css" />
+        <link rel="stylesheet" type="text/css" href="css/pages/roulette.css" />
+        <link rel="stylesheet" type="text/css" href="css/components/nav.css" />
+        <link rel="stylesheet" type="text/css" href="css/components/btn.css" />
         <link
             rel="stylesheet"
             type="text/css"
-            href="/css/components/tabs.css"
+            href="css/components/tabs.css"
         />
         <script src="https://unpkg.com/vue@3.2.31/dist/vue.global.js"></script>
         <script src="https://unpkg.com/vue-router@4.0.14/dist/vue-router.global.prod.js"></script>
-        <script type="module" src="/js/main.js"></script>
+        <script type="module" src="js/main.js"></script>
     </head>
     <body id="app">
         <header :class="{ dark: store.dark }">
@@ -58,12 +58,12 @@
                         @click.prevent="store.toggleDark()"
                     >
                         <img
-                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
+                            :src="store.dark ? 'assets/light.svg' : 'assets/dark.svg'"
                             alt=""
                         />
                     </button>
                     <a class="nav__icon" href="https://discord.gg/carQUB7JN2">
-                        <img src="/assets/discord.svg" alt="Discord Logo" />
+                        <img src="assets/discord.svg" alt="Discord Logo" />
                     </a>
                 </div>
             </nav>
