Update index.html to fix icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:url" content="https://2plist.github.io/" />
         <meta property="og:image" content="favicon.ico" />
         <title>2 Player List</title>
-        <link rel="icon" href="favicon.ico" />
+        <link rel="icon" href="2plisticon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
