--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=1024" />
         <meta property="og:title" content="2 Player List" />
         <meta property="og:description" content="A collection of the hardest 2-player levels that were beaten solo" />
-        <meta property="og:url" content="https://2plist.github.io/" />
+        <meta property="og:url" content="https://2plist.github.io/2plist/#/" />
         <meta property="og:image" content="favicon.ico" />
         <title>2 Player List</title>
         <link rel="icon" href="2plisticon.png" />
