--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
                         @click.prevent="store.toggleDark()"
                     >
                         <img
-                            :src="store.dark ? 'assets/light.svg' : 'assets/dark.svg'"
+                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/carQUB7JN2">
-                        <img src="assets/discord.svg" alt="Discord Logo" />
+                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                        <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
+                    <a
+                        class="nav__cta type-label-lg"
+                        href="https://forms.gle/NxTuNCJm2kPswrBa8"
+                        target="_blank"
+                        >Submit Record</a
+                    >
                 </div>
             </nav>
         </header>
