Fix discord icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="2 Player List" />
         <meta property="og:description" content="A collection of the hardest 2-player levels that were beaten solo" />
         <meta property="og:url" content="https://2plist.github.io/2plist/#/" />
-        <meta property="og:image" content="favicon.ico" />
+        <meta property="og:image" content="2plisticon.png" />
         <title>2 Player List</title>
         <link rel="icon" href="2plisticon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,7 +63,7 @@
                         />
                     </button>
                     <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
-                        <img src="/assets/discord.svg" alt="Discord Logo" />
+                        <img src="assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a
                         class="nav__cta type-label-lg"
