--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                    <a class="nav__icon" href="https://discord.gg/carQUB7JN2">
                         <img src="assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <a
