Fix icon for light/dark mode

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         @click.prevent="store.toggleDark()"
                     >
                         <img
-                            :src="store.dark ? '/assets/light.svg' : '/assets/dark.svg'"
+                            :src="store.dark ? 'assets/light.svg' : 'assets/dark.svg'"
                             alt=""
                         />
                     </button>
